add one more random color

--- a/colorswitcher.html
+++ b/colorswitcher.html
@@ -18,7 +18,7 @@
             body_element.style = "background-color:black";
         }
 
-        let black = document.getElementById("black");
+        let black = document.getElementById("blue");
         black.addEventListener("click", switchToBlack);
 
 
